--- a/app/src/main/res/layout/activity_main_student.xml
+++ b/app/src/main/res/layout/activity_main_student.xml
@@ -24,12 +24,11 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
 
-            android:layout_marginTop="28dp"
-            android:layout_marginBottom="17dp"
-            android:background="@drawable/settings"
             android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="25sp"
-          />
+            android:layout_marginTop="28dp"
+            android:layout_marginBottom="17dp"
+            android:background="@drawable/settings" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/helpmain"
@@ -39,23 +38,23 @@
             android:layout_marginHorizontal="75sp"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="17dp"
-            android:background="@drawable/help"
-     />
+            android:background="@drawable/help" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/profilemain"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginBottom="17dp"
-            android:background="@drawable/profile"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="289sp"
-            />
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="17dp"
+            android:background="@drawable/profile" />
 
         <TextView
             android:id="@+id/title1"
             android:layout_width="162dp"
             android:layout_height="75dp"
+            android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
             android:shadowColor="#B64A63"
             android:shadowDx="5"
@@ -63,10 +62,7 @@
             android:shadowRadius="5"
             android:text="Quest?on"
             android:textColor="#FA9191"
-            android:textSize="40sp"
-            android:layout_gravity="center"
-           />
-
+            android:textSize="40sp" />
 
 
     </FrameLayout>
@@ -84,6 +80,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75">
+
+
+        <FrameLayout
+            android:id="@+id/frameLayout3"
+            android:layout_width="362dp"
+            android:layout_height="70dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/main_shape"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.75">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:text="hacer encuesta"
+                android:fontFamily="@font/lato_bold"
+                android:textColor="#525252"
+                android:layout_gravity="right"
+                android:background="@drawable/bottom_buttons_main" />
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:text="consultar encuestas"
+                android:fontFamily="@font/lato_bold"
+                android:textColor="#525252"
+                android:layout_gravity="left"
+                android:background="@drawable/bottom_buttons_main" />
+
+        </FrameLayout>
 
 
     </FrameLayout>
