--- a/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
@@ -85,7 +85,49 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="520dp"
-            />
+            >
+            <TextView
+                android:id="@+id/numberMakeCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/lato_bold"
+                android:textAlignment="center"
+                android:text="1"
+                android:textColor="#EB6383"
+                android:textSize="40sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/questionnaire_advance_create"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="right"
+                android:background="@drawable/question_arrow_forward"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="50sp"
+                android:layout_marginBottom="90sp"></FrameLayout>
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/create_questionnaire"
+                android:layout_width="200sp"
+                android:layout_marginTop="440sp"
+                android:layout_height="70dp"
+                android:textColor="#FFE9C5"
+                android:background="@drawable/buttongradient"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/lato_bold"
+                android:text="Terminar" />
+
+        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frameLayout3"
@@ -102,7 +144,6 @@
             app:layout_constraintVertical_bias="0.75">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/create_questionnaire_button"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="crear encuesta"
@@ -112,16 +153,17 @@
                 android:background="@drawable/bottom_buttons_main" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:text="consultar encuestas"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
-            android:layout_gravity="left"
-            android:background="@drawable/bottom_buttons_main" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/create_to_see_button"
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:text="consultar encuestas"
+                android:fontFamily="@font/lato_bold"
+                android:textColor="#525252"
+                android:layout_gravity="left"
+                android:background="@drawable/bottom_buttons_main" />
 
-    </FrameLayout>
+        </FrameLayout>
 
 
     </FrameLayout>
