--- a/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
@@ -98,6 +98,37 @@
                 android:textSize="40sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/questionnaire_add_question"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="90dp"
+                android:background="@drawable/buttongradient"
+                android:text="+"
+                android:textColor="#FFE9C5"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/questionnaire_delete_question"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="90dp"
+                android:layout_marginRight="90dp"
+                android:background="@drawable/buttongradient"
+                android:text="-"
+                android:textColor="#FFE9C5"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/questionnaire_advance_create"
                 android:layout_width="53dp"
                 android:layout_height="48dp"
