add and delete users from teams, see and visualize the teams, create teams and join teams

--- a/app/src/main/res/layout/activity_main_student.xml
+++ b/app/src/main/res/layout/activity_main_student.xml
@@ -41,7 +41,7 @@
             android:background="@drawable/help" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemain"
+            android:id="@+id/profilemainstudent"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center_vertical"
