--- a/app/src/main/res/layout/activity_main_teacher.xml
+++ b/app/src/main/res/layout/activity_main_teacher.xml
@@ -41,7 +41,7 @@
             android:background="@drawable/help" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemain"
+            android:id="@+id/profilemainteacher"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center_vertical"
@@ -85,7 +85,13 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="520dp"
-            />
+            >
+            <ListView
+                android:id="@+id/teacher_main_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frameLayout3"
@@ -113,6 +119,7 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/main_teacher_go_button"
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:text="consultar encuestas"
