--- a/app/src/main/res/layout/activity_questionnaire_start_teacher.xml
+++ b/app/src/main/res/layout/activity_questionnaire_start_teacher.xml
@@ -144,6 +144,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/goMainFromQuestionnaireTeacher"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="consultar encuestas"
