--- a/app/src/main/res/layout/activity_main_teacher.xml
+++ b/app/src/main/res/layout/activity_main_teacher.xml
@@ -89,6 +89,7 @@
             <ListView
                 android:id="@+id/teacher_main_list"
                 android:layout_width="match_parent"
+                android:descendantFocusability="blocksDescendants"
                 android:layout_height="match_parent"/>
 
         </FrameLayout>
