--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -123,6 +123,7 @@
         </FrameLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/close_session"
             android:layout_width="100dp"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="480dp"
