--- a/app/src/main/res/layout/activity_questionnaire_start_student.xml
+++ b/app/src/main/res/layout/activity_questionnaire_start_student.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsmainstudent"
+            android:id="@+id/settingsmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
 
@@ -31,7 +31,7 @@
             android:background="@drawable/settings" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/helpmainstudent"
+            android:id="@+id/helpmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
@@ -41,7 +41,7 @@
             android:background="@drawable/help" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemainstudent"
+            android:id="@+id/profilemain"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center_vertical"
@@ -86,11 +86,37 @@
             android:layout_width="match_parent"
             android:layout_height="520dp"
             >
-            <ListView
-                android:id="@+id/student_main_list"
-                android:layout_width="match_parent"
-                android:descendantFocusability="blocksDescendants"
-                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/textEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="170sp"
+                android:layout_marginHorizontal="20sp"
+                android:fontFamily="@font/lato_bold"
+                android:textAlignment="center"
+                android:text="Introduce el código del formulario:"
+                android:textColor="#EB6383"
+                android:textSize="25sp" />
+            <EditText
+                android:id="@+id/questionnaire_code_input"
+                android:layout_width="314dp"
+                android:layout_height="34dp"
+                android:layout_marginTop="250sp"
+                android:background="@drawable/question_input"
+                android:layout_gravity="center_horizontal"
+                android:ems="10"
+                android:inputType="text" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/start_questionnaire"
+                android:layout_width="200sp"
+                android:layout_marginTop="370sp"
+                android:layout_height="70dp"
+                android:textColor="#FFE9C5"
+                android:background="@drawable/buttongradient"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/lato_bold"
+                android:text="Comenzar" />
 
         </FrameLayout>
 
@@ -109,7 +135,6 @@
             app:layout_constraintVertical_bias="0.75">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/fill_questionnaire_button"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="hacer encuesta"
@@ -120,7 +145,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/main_student_go_button"
+                android:id="@+id/goMainFromQuestionnaireStudent"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="consultar encuestas"
