--- a/app/src/main/res/layout/activity_questionnaire_student_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_student_make.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsmainstudent"
+            android:id="@+id/settingsmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
 
@@ -31,7 +31,7 @@
             android:background="@drawable/settings" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/helpmainstudent"
+            android:id="@+id/helpmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
@@ -41,7 +41,7 @@
             android:background="@drawable/help" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemainstudent"
+            android:id="@+id/profilemain"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center_vertical"
@@ -86,11 +86,60 @@
             android:layout_width="match_parent"
             android:layout_height="520dp"
             >
-            <ListView
-                android:id="@+id/student_main_list"
+            <TextView
+                android:id="@+id/numberMakeCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/lato_bold"
+                android:textAlignment="center"
+                android:text="1"
+                android:textColor="#EB6383"
+                android:textSize="40sp" />
+
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/questionnaire_advance_create"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="right"
+                android:background="@drawable/question_arrow_forward"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/questionnaire_back_create"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="left"
+                android:background="@drawable/question_arrow_back"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <FrameLayout
+                android:id="@+id/fragment_container_student"
                 android:layout_width="match_parent"
-                android:descendantFocusability="blocksDescendants"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginTop="50sp"
+                android:layout_marginBottom="90sp"></FrameLayout>
+
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/create_questionnaire"
+                android:layout_width="200sp"
+                android:layout_marginTop="440sp"
+                android:layout_height="70dp"
+                android:textColor="#FFE9C5"
+                android:background="@drawable/buttongradient"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/lato_bold"
+                android:text="Terminar" />
 
         </FrameLayout>
 
@@ -109,7 +158,6 @@
             app:layout_constraintVertical_bias="0.75">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/fill_questionnaire_button"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="hacer encuesta"
@@ -120,7 +168,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/main_student_go_button"
+                android:id="@+id/create_to_see_button"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:text="consultar encuestas"
