--- a/app/src/main/res/layout/fragment_generate_code.xml
+++ b/app/src/main/res/layout/fragment_generate_code.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#ffffff">
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GenerateCodeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textEmail"
         android:layout_width="wrap_content"
@@ -16,7 +19,7 @@
         android:textAlignment="center"
         android:text="El cuestionario se ha creado con éxito. El código de este cuestionario es:"
         android:textColor="#EB6383"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
     <TextView
         android:id="@+id/questionnaire_code_name"
         android:textAlignment="center"
@@ -24,16 +27,120 @@
         android:textSize="25dp"
         android:layout_width="314dp"
         android:layout_height="34dp"
-        android:layout_marginTop="140sp"
+        android:layout_marginTop="90sp"
         android:background="@drawable/question_input"
         android:layout_gravity="center_horizontal"
         android:ems="10"
         />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".GenerateCodeFragment">
+
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="130sp"
+            android:layout_marginHorizontal="20sp"
+            android:fontFamily="@font/lato_bold"
+            android:textAlignment="center"
+            android:text="Elige a quién quieres asignar este cuestionario. Puedes asignarlo a equipos y/o personas:"
+            android:textColor="#EB6383"
+            android:textSize="20sp" />
+
+        <FrameLayout
+            android:id="@+id/StudentLayout"
+            android:layout_width="314dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="210sp"
+            android:background="@drawable/question_input"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            >
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/add_student_assign"
+                android:layout_width="60sp"
+                android:layout_marginTop="5sp"
+                android:layout_height="40sp"
+                android:textColor="#FFE9C5"
+                android:background="@drawable/buttongradient"
+                android:layout_marginLeft="250sp"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="30sp"
+                android:text="+" />
+
+            <EditText
+                android:id="@+id/input_student_assign"
+                android:layout_width="240sp"
+                android:layout_height="30sp"
+                android:layout_marginRight="30sp"
+                android:hint = "email del estudiante"
+                android:layout_marginTop="10sp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/textinput"
+                >
+
+            </EditText>
+
+            <ListView
+                android:id="@+id/list_assign_students"
+                android:layout_width="300sp"
+                android:layout_height="115dp"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"></ListView>
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/TeamsLayout"
+            android:layout_width="314dp"
+            android:layout_height="170dp"
+            android:layout_marginTop="405sp"
+            android:background="@drawable/question_input"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            >
+            <TextView
+                android:id="@+id/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:layout_marginHorizontal="20sp"
+                android:fontFamily="@font/lato_bold"
+                android:textAlignment="center"
+                android:text="Equipos que has creado:"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <ListView
+                android:id="@+id/list_assign_teams"
+                android:layout_width="300sp"
+                android:layout_height="125dp"
+                android:layout_marginTop="10sp"
+                android:choiceMode="multipleChoice"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:cacheColorHint="#00000000"
+                android:dividerHeight="1px"
+                android:layout_centerHorizontal="true"
+                android:drawSelectorOnTop="false"
+                android:fadingEdge="vertical"
+                android:scrollbars="none"
+                android:smoothScrollbar="true"
+                android:soundEffectsEnabled="true"
+                ></ListView>
+
+        </FrameLayout>
+    </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/finish_making_questionnaire"
         android:layout_width="200sp"
-        android:layout_marginTop="300sp"
+        android:layout_marginTop="580sp"
         android:layout_height="70dp"
         android:textColor="#FFE9C5"
         android:background="@drawable/buttongradient"
@@ -41,3 +148,4 @@
         android:fontFamily="@font/lato_bold"
         android:text="Terminar" />
 </FrameLayout>
+</ScrollView>
