--- a/app/src/main/res/layout/main_list_item_teacher.xml
+++ b/app/src/main/res/layout/main_list_item_teacher.xml
@@ -19,5 +19,12 @@
         android:layout_weight="4"
         android:textSize="20dp"
         />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/profilemainstudent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="20sp"
+        android:background="@drawable/edit" />
 
 </LinearLayout>
