--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -30,7 +30,7 @@
             android:fontFamily="@font/lato_bold"
             android:textAlignment="center"
             android:text="Introduce tu correo electrónico para recibir las instrucciones del cambio de contraseña"
-            android:textColor="#EB6383"
+            android:textColor="#faf0d7"
             android:textSize="25sp" />
 
         <EditText
@@ -53,7 +53,7 @@
             android:background="@drawable/buttongradient"
             android:fontFamily="@font/lato_bold"
             android:text="Cambiar contraseña"
-            android:textColor="#FFE9C5" />
+            android:textColor="#FFF" />
 
     </FrameLayout>
 
@@ -68,7 +68,7 @@
         android:shadowDy="1"
         android:shadowRadius="6"
         android:text="Iniciar sesión"
-        android:textColor="#99EB6383"
+        android:textColor="#FFD9C0"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
         android:shadowDy="5"
         android:shadowRadius="10"
         android:text="Iniciar sesión"
-        android:textColor="#FA9191"
+        android:textColor="#FAF0D7"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
