--- a/app/src/main/res/drawable/question_input.xml
+++ b/app/src/main/res/drawable/question_input.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#8057b59c"></solid>
+    <solid android:color="#ffd9c0"></solid>
     <corners android:radius="10sp"/>
 
 </shape>
