--- a/app/src/main/res/layout-v26/activity_see_results.xml
+++ b/app/src/main/res/layout-v26/activity_see_results.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -56,12 +56,12 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Quest?on"
-            android:textColor="#FA9191"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:textSize="40sp" />
 
 
@@ -94,9 +94,20 @@
                 android:fontFamily="@font/lato_bold"
                 android:textAlignment="center"
                 android:text="1"
-                android:textColor="#EB6383"
+                android:textColor="#f4bfbf"
                 android:textSize="40sp" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/excel"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="90dp"
+                android:background="@drawable/excel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/edit_questionnaire"
@@ -131,12 +142,22 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
+            <TextView
+                android:id="@+id/code"
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:layout_marginTop="50sp"
+                android:layout_marginHorizontal="20sp"
+                android:fontFamily="@font/lato_bold"
+                android:textAlignment="center"
+                android:text="CODE"
+                android:textColor="#faf0d7"
+                android:textSize="25sp" />
             <FrameLayout
                 android:id="@+id/fragment_container_student"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="50sp"
+                android:layout_marginTop="100sp"
                 android:layout_marginBottom="90sp"></FrameLayout>
 
 
@@ -146,7 +167,7 @@
                 android:layout_width="200sp"
                 android:layout_marginTop="440sp"
                 android:layout_height="70dp"
-                android:textColor="#FFE9C5"
+                android:textColor="#FFF"
                 android:background="@drawable/buttongradient"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
