--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -29,7 +29,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Correo electrónico"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
 
         <TextView
@@ -40,7 +40,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Contraseña"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
 
         <EditText
@@ -69,7 +69,7 @@
             android:layout_width="200sp"
             android:layout_marginTop="390sp"
             android:layout_height="70dp"
-            android:textColor="#FFE9C5"
+            android:textColor="#FFFFFF"
             android:background="@drawable/buttongradient"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/lato_bold"
@@ -84,14 +84,14 @@
             android:background="#00EB6383"
             android:fontFamily="@font/lato_bold"
             android:text="@string/forgotten_password"
-            android:textColor="#EB6383" />
+            android:textColor="#ffd9c0" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/registerButton"
             android:layout_width="200sp"
             android:layout_marginTop="470sp"
             android:layout_height="70dp"
-            android:textColor="#FFE9C5"
+            android:textColor="#FFFFFF"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/buttongradient"
             android:fontFamily="@font/lato_bold"
@@ -108,7 +108,7 @@
         android:shadowDy="1"
         android:shadowRadius="6"
         android:text="Iniciar sesión"
-        android:textColor="#99EB6383"
+        android:textColor="#FFD9C0"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,7 @@
         android:shadowDy="5"
         android:shadowRadius="10"
         android:text="Iniciar sesión"
-        android:textColor="#FA9191"
+        android:textColor="#FAF0D7"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
