--- a/app/src/main/res/layout/activity_main_teacher.xml
+++ b/app/src/main/res/layout/activity_main_teacher.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -56,12 +56,12 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Quest?on"
-            android:textColor="#FA9191"
             android:textSize="40sp" />
 
 
@@ -110,26 +110,16 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/create_questionnaire_button"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="crear encuesta"
                 android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="right"
+                android:textColor="#FFFFFF"
+                android:layout_gravity="center"
                 android:background="@drawable/bottom_buttons_main" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/main_teacher_go_button"
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:text="consultar encuestas"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
-            android:layout_gravity="left"
-            android:background="@drawable/bottom_buttons_main" />
-
-    </FrameLayout>
+        </FrameLayout>
 
 
     </FrameLayout>
