--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsrGoBack"
+            android:id="@+id/settingsGoBack"
             android:layout_width="53dp"
             android:layout_height="48dp"
 
@@ -36,12 +36,12 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Perfil"
-            android:textColor="#FA9191"
             android:textSize="40sp" />
 
 
@@ -61,89 +61,63 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75">
 
-        <ImageView
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10sp"
-            android:background="@drawable/profile"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="200dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="60dp"
-            android:layout_marginTop="180dp"
-            android:text="editar foto"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
-            android:background="@drawable/bottom_buttons_main" />
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/check_teams"
-            android:layout_width="200dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="250dp"
-            android:text="consultar equipos"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/bottom_buttons_main"
             android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
-            android:background="@drawable/bottom_buttons_main" />
+            android:text="consultar equipos"
+            android:textColor="#FFF" />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="top"
-            android:layout_marginTop="330dp"
+            android:layout_marginTop="170dp"
             android:background="@drawable/main_shape">
+
             <TextView
+                android:id="@+id/profileName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="*nombre de usuario*"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
                 android:layout_gravity="center"
-                android:textSize="20dp"
-                />
+                android:fontFamily="@font/lato_bold"
+                android:text="*nombre de usuario*"
+                android:textColor="#FFF"
+                android:textSize="20dp" />
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="top"
-            android:layout_marginTop="410dp"
+            android:layout_marginTop="300dp"
             android:background="@drawable/main_shape">
+
             <TextView
+                android:id="@+id/profileType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tipo de perfil: *tipo*"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
                 android:layout_gravity="center"
-                android:textSize="20dp"
-                />
+                android:fontFamily="@font/lato_bold"
+                android:text="Tipo de perfil: *tipo*"
+                android:textColor="#FFF"
+                android:textSize="20dp" />
         </FrameLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/close_session"
             android:layout_width="100dp"
             android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="480dp"
+            android:layout_marginTop="400dp"
             android:layout_height="40dp"
             android:text="cerrar sesión"
             android:fontFamily="@font/lato_bold"
             android:textColor="#525252"
-            android:background="#B4F2E1" />
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_height="80dp"
-            android:text="guardar cambios"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
-
-            android:background="@drawable/bottom_buttons_main" />
-
+            android:background="#8cc0de" />
 
 
     </FrameLayout>
