--- a/app/src/main/res/layout/activity_questionnaire_start_student.xml
+++ b/app/src/main/res/layout/activity_questionnaire_start_student.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -56,12 +56,12 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Quest?on"
-            android:textColor="#FA9191"
             android:textSize="40sp" />
 
 
@@ -95,7 +95,7 @@
                 android:fontFamily="@font/lato_bold"
                 android:textAlignment="center"
                 android:text="Introduce el código del formulario:"
-                android:textColor="#EB6383"
+                android:textColor="#faf0d7"
                 android:textSize="25sp" />
             <EditText
                 android:id="@+id/questionnaire_code_input"
@@ -112,7 +112,7 @@
                 android:layout_width="200sp"
                 android:layout_marginTop="370sp"
                 android:layout_height="70dp"
-                android:textColor="#FFE9C5"
+                android:textColor="#FFF"
                 android:background="@drawable/buttongradient"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
@@ -134,24 +134,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.75">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:text="hacer encuesta"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="right"
-                android:background="@drawable/bottom_buttons_main" />
-
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/goMainFromQuestionnaireStudent"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="consultar encuestas"
                 android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="left"
+                android:textColor="#FFF"
+                android:layout_gravity="center"
                 android:background="@drawable/bottom_buttons_main" />
 
         </FrameLayout>
