--- a/app/src/main/res/layout/activity_questionnaire_student_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_student_make.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -56,12 +56,12 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Quest?on"
-            android:textColor="#FA9191"
             android:textSize="40sp" />
 
 
@@ -94,7 +94,7 @@
                 android:fontFamily="@font/lato_bold"
                 android:textAlignment="center"
                 android:text="1"
-                android:textColor="#EB6383"
+                android:textColor="#f4bfbf"
                 android:textSize="40sp" />
 
 
@@ -135,7 +135,7 @@
                 android:layout_width="200sp"
                 android:layout_marginTop="440sp"
                 android:layout_height="70dp"
-                android:textColor="#FFE9C5"
+                android:textColor="#FFF"
                 android:background="@drawable/buttongradient"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
