--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -29,7 +29,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Correo electrónico"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
 
         <TextView
@@ -40,7 +40,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Contraseña"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
         <TextView
             android:id="@+id/textConfirmPassword"
@@ -50,7 +50,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Confirmar contraseña"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
 
         <EditText
@@ -95,7 +95,7 @@
             android:background="@drawable/buttongradient"
             android:fontFamily="@font/lato_bold"
             android:text="Registrarse"
-            android:textColor="#FFE9C5" />
+            android:textColor="#FFF" />
         <TextView
             android:id="@+id/textRoleType"
             android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
             android:layout_marginHorizontal="20sp"
             android:fontFamily="@font/lato_bold"
             android:text="Tipo de cuenta"
-            android:textColor="#EB6383"
+            android:textColor="#FAF0D7"
             android:textSize="30sp" />
 
         <Spinner
@@ -139,7 +139,7 @@
         android:shadowDy="1"
         android:shadowRadius="6"
         android:text="Registrarse"
-        android:textColor="#99EB6383"
+        android:textColor="#FFD9C0"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -159,7 +159,7 @@
         android:shadowDy="5"
         android:shadowRadius="10"
         android:text="Registrarse"
-        android:textColor="#FA9191"
+        android:textColor="#FAF0D7"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
