--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/finalbg"
     android:theme="@style/ThemeOverlay.Question2.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsrGoBack"
+            android:id="@+id/settingsGoBack"
             android:layout_width="53dp"
             android:layout_height="48dp"
 
@@ -36,12 +36,12 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             android:fontFamily="@font/pacifico_normal"
-            android:shadowColor="#B64A63"
+            android:shadowColor="#f4a0bf"
+            android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Ajustes"
-            android:textColor="#FA9191"
             android:textSize="40sp" />
 
 
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tamaño de la letra"
                 android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
+                android:textColor="#FFF"
                 android:layout_gravity="center"
                 android:textSize="30dp"
                 />
@@ -84,7 +84,7 @@
             android:layout_gravity="left"
             android:layout_marginLeft="10sp"
             android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
+            android:textColor="#FFF"
 
             android:background="@drawable/bottom_buttons_main" />
         <androidx.appcompat.widget.AppCompatButton
@@ -96,7 +96,7 @@
             android:text="grande"
             android:textSize="20sp"
             android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
+            android:textColor="#FFF"
 
             android:background="@drawable/bottom_buttons_main" />
         <androidx.appcompat.widget.AppCompatButton
@@ -107,7 +107,7 @@
             android:layout_gravity="center_horizontal"
             android:text="mediano"
             android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
+            android:textColor="#FFF"
 
             android:background="@drawable/bottom_buttons_main" />
 
@@ -123,7 +123,7 @@
                 android:text="Activar notificaciones"
                 android:fontFamily="@font/lato_bold"
                 android:layout_marginLeft="10sp"
-                android:textColor="#525252"
+                android:textColor="#FFF"
                 android:layout_gravity="center_vertical"
                 android:textSize="20dp"
                 />
@@ -148,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:text="Colores"
                 android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
+                android:textColor="#FFF"
                 android:layout_gravity="center_horizontal"
                 android:textSize="30dp"
                 />
@@ -177,7 +177,7 @@
             android:layout_height="80dp"
             android:text="guardar cambios"
             android:fontFamily="@font/lato_bold"
-            android:textColor="#525252"
+            android:textColor="#FFF"
 
             android:background="@drawable/bottom_buttons_main" />
 
