--- a/app/src/main/res/layout/elv_team.xml
+++ b/app/src/main/res/layout/elv_team.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,4 +14,12 @@
         android:layout_marginLeft="10dp"
         ></TextView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/deleteGroup"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/delete"></ImageView>
+
+</RelativeLayout>
