--- a/app/src/main/res/layout/fragment_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice.xml
@@ -58,11 +58,12 @@
                 android:text="+" />
 
             <ListView
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:id="@+id/list_create_multiple_options"
                 android:layout_width="300sp"
                 android:layout_height="145dp"
                 android:layout_marginTop="20sp"
-                android:choiceMode="singleChoice"
                 android:layout_gravity="center"></ListView>
 
         </FrameLayout>
