--- a/app/src/main/res/layout/activity_main_teacher.xml
+++ b/app/src/main/res/layout/activity_main_teacher.xml
@@ -62,7 +62,7 @@
             android:shadowDy="5"
             android:shadowRadius="5"
             android:text="Quest?on"
-            android:textSize="40sp" />
+            style="@style/FixedMainText" />
 
 
     </FrameLayout>
@@ -113,6 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="crear encuesta"
+                style="@style/FixedButtonText"
                 android:fontFamily="@font/lato_bold"
                 android:textColor="#FFFFFF"
                 android:layout_gravity="center"
