--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,8 @@
             android:fontFamily="@font/lato_bold"
             android:text="Correo electrónico"
             android:textColor="#FAF0D7"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            />
 
         <TextView
             android:id="@+id/textPassword"
@@ -73,6 +74,7 @@
             android:background="@drawable/buttongradient"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/lato_bold"
+            style="@style/FixedButtonText"
             android:text="Iniciar sesión" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -95,6 +97,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/buttongradient"
             android:fontFamily="@font/lato_bold"
+            style="@style/FixedButtonText"
             android:text="Registrarse" />
     </FrameLayout>
 
@@ -109,7 +112,7 @@
         android:shadowRadius="6"
         android:text="Iniciar sesión"
         android:textColor="#FFD9C0"
-        android:textSize="60sp"
+        style="@style/FixedTextTitle"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +129,7 @@
         android:shadowRadius="10"
         android:text="Iniciar sesión"
         android:textColor="#FAF0D7"
-        android:textSize="60sp"
+        style="@style/FixedTextTitle"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
