--- a/app/src/main/res/layout/activity_questionnaire_student_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_student_make.xml
@@ -20,49 +20,39 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsmain"
+            android:id="@+id/backmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
-
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="25sp"
+            android:layout_marginHorizontal="30sp"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="17dp"
-            android:background="@drawable/settings" />
+            android:background="@drawable/arrow_back" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/helpmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="75sp"
+            android:layout_gravity="right"
+            android:layout_marginRight="30sp"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="17dp"
             android:background="@drawable/help" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemain"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="289sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="17dp"
-            android:background="@drawable/profile" />
-
         <TextView
             android:id="@+id/title1"
-            android:layout_width="162dp"
-            android:layout_height="75dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
             android:shadowColor="#f4a0bf"
             android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
+            android:gravity="center"
             android:shadowRadius="5"
-            android:text="Quest?on"
-            android:textSize="40sp" />
+            android:text="Rellenar \n Cuestionario"
+            style="@style/FixedQuestionnaireText" />
 
 
     </FrameLayout>
@@ -95,7 +85,7 @@
                 android:textAlignment="center"
                 android:text="1"
                 android:textColor="#f4bfbf"
-                android:textSize="40sp" />
+                android:textSize="40dp" />
 
 
 
@@ -139,6 +129,7 @@
                 android:background="@drawable/buttongradient"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
+                style="@style/FixedButtonText"
                 android:text="Terminar" />
 
         </FrameLayout>
@@ -155,29 +146,7 @@
             app:layout_constraintHorizontal_bias="0.489"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:text="hacer encuesta"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="right"
-                android:background="@drawable/bottom_buttons_main" />
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/create_to_see_button"
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:text="consultar encuestas"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="left"
-                android:background="@drawable/bottom_buttons_main" />
-
-        </FrameLayout>
+            app:layout_constraintVertical_bias="0.75"/>
 
 
     </FrameLayout>
