--- a/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
@@ -20,49 +20,30 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/settingsmain"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="28dp"
-            android:layout_marginBottom="17dp"
-            android:background="@drawable/settings" />
-
-        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/helpmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="75sp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="17dp"
             android:background="@drawable/help" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/profilemain"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="289sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="17dp"
-            android:background="@drawable/profile" />
-
         <TextView
             android:id="@+id/title1"
-            android:layout_width="162dp"
-            android:layout_height="75dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/pacifico_normal"
             android:shadowColor="#f4a0bf"
             android:textColor="#faf0d7"
             android:shadowDx="5"
             android:shadowDy="5"
+            android:gravity="center"
             android:shadowRadius="5"
-            android:text="Quest?on"
-            android:textSize="40sp" />
+
+            android:text="Crear \n Cuestionario"
+            style="@style/FixedQuestionnaireText" />
 
 
     </FrameLayout>
@@ -95,7 +76,7 @@
                 android:textAlignment="center"
                 android:text="1"
                 android:textColor="#f4bfbf"
-                android:textSize="40sp" />
+                android:textSize="40dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/questionnaire_add_question"
@@ -106,7 +87,7 @@
                 android:background="@drawable/buttongradient"
                 android:text="+"
                 android:textColor="#FFE9C5"
-                android:textSize="30sp"
+                style="@style/FixedResultsText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +102,7 @@
                 android:layout_marginRight="90dp"
                 android:background="@drawable/buttongradient"
                 android:text="-"
+                style="@style/FixedResultsText"
                 android:textColor="#FFE9C5"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -168,6 +150,7 @@
                 android:background="@drawable/buttongradient"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
+                style="@style/FixedButtonText"
                 android:text="Terminar" />
 
         </FrameLayout>
@@ -184,29 +167,7 @@
             app:layout_constraintHorizontal_bias="0.489"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:text="crear encuesta"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="right"
-                android:background="@drawable/bottom_buttons_main" />
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/create_to_see_button"
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:text="consultar encuestas"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="#525252"
-                android:layout_gravity="left"
-                android:background="@drawable/bottom_buttons_main" />
-
-        </FrameLayout>
+            app:layout_constraintVertical_bias="0.75"/>
 
 
     </FrameLayout>
