--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -31,7 +31,7 @@
             android:textAlignment="center"
             android:text="Introduce tu correo electrónico para recibir las instrucciones del cambio de contraseña"
             android:textColor="#faf0d7"
-            android:textSize="25sp" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/sendEmailText"
@@ -53,6 +53,7 @@
             android:background="@drawable/buttongradient"
             android:fontFamily="@font/lato_bold"
             android:text="Cambiar contraseña"
+            style="@style/FixedButtonText"
             android:textColor="#FFF" />
 
     </FrameLayout>
@@ -69,7 +70,7 @@
         android:shadowRadius="6"
         android:text="Iniciar sesión"
         android:textColor="#FFD9C0"
-        android:textSize="60sp"
+        style="@style/FixedTextTitle"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +87,7 @@
         android:shadowRadius="10"
         android:text="Iniciar sesión"
         android:textColor="#FAF0D7"
-        android:textSize="60sp"
+        style="@style/FixedTextTitle"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
