--- a/app/src/main/res/layout/fragment_answers_choices.xml
+++ b/app/src/main/res/layout/fragment_answers_choices.xml
@@ -43,27 +43,10 @@
 
             <ListView
                 android:id="@+id/answers_choices_list"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="left"
-                android:layout_weight="1"
-                android:cacheColorHint="#00000000"
-                android:dividerHeight="1px"
-                android:drawSelectorOnTop="false"
-                android:fadingEdge="vertical"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:scrollbars="none"
-                android:smoothScrollbar="true"
-                android:soundEffectsEnabled="true" />
-
-            <ListView
-                android:id="@+id/answers_percentage_list"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="right"
                 android:layout_weight="1"
                 android:cacheColorHint="#00000000"
                 android:dividerHeight="1px"
